Update to use app.properties field for schema validation. Allowing a generic solution.